--- a/src/context-2/components/cmp-2.1/cmp-2.1.html
+++ b/src/context-2/components/cmp-2.1/cmp-2.1.html
@@ -1,7 +1,7 @@
-<h1 class="cmp-2-1">Component 2.1</h1>
 <div class="component-path">app / context-2 / cmp-2.1</div>
-<h5>Sub-component:</h5>
-<component-two-two items="$ctrl.items" on-select="$ctrl.setSelectedItem($event)"></component-two-two>
-<p>
-  Selected Item: <span  class="selected-item" ng-bind="$ctrl.selectedItem"></span>
-</p>
+<p>Selected a value to pass an event to a parent component:</p>
+<ul>
+  <li class="list-item" ng-repeat="item in $ctrl.items">
+    <a ng-click="$ctrl.select(item)" ng-bind="item"></a>
+  </li>
+</ul>
