--- a/src/domain-2/components/cmp-2.1/cmp-2.1.html
+++ b/src/domain-2/components/cmp-2.1/cmp-2.1.html
@@ -1,4 +1,4 @@
-<div class="component-path">app / context-2 / cmp-2.1</div>
+<div class="component-path">app / domain-2 / cmp-2.1</div>
 <p>Selected a value to pass an event to a parent component:</p>
 <ul>
   <li class="list-item" ng-repeat="item in $ctrl.items">
