--- a/src/common/components/navbar/navbar.html
+++ b/src/common/components/navbar/navbar.html
@@ -5,9 +5,9 @@
     </div>
     <nav>
       <ul class="navbar-nav nav">
-        <li ui-sref-active="active"><a ui-sref="context1">Context One</a></li>
-        <li ui-sref-active="active"><a ui-sref="context2">Context Two</a></li>
-        <li ng-class="{active: $ctrl.includes('context3')}"><a ui-sref="context3.one">Context Three</a></li>
+        <li ui-sref-active="active"><a ui-sref="domain1">Domain One</a></li>
+        <li ui-sref-active="active"><a ui-sref="domain2">Domain Two</a></li>
+        <li ng-class="{active: $ctrl.includes('domain3')}"><a ui-sref="domain3.one">Domain Three</a></li>
       </ul>
     </nav>
   </div>
